--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -26,8 +26,10 @@
             android:layout_height="180dp"
             app:civ_border_color="@color/black_overlay"
             app:civ_border_width="2dp"
-            android:id="@+id/photo_upload"
-            android:src="@drawable/ic_person"/>
+            android:id="@+id/photo_upload">
+
+        </de.hdodenhof.circleimageview.CircleImageView>
+            <!--android:src="@drawable/ic_person" /-->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,7 +60,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="     Name"
-            android:drawableLeft="@drawable/user_icon"
             android:padding="10dp"
             android:textColor="@color/black_overlay"
             android:textAlignment="center"
@@ -70,7 +71,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="     EMail"
-            android:drawableLeft="@drawable/mail_icon"
             android:padding="10dp"
             android:textColor="@color/black_overlay"
             android:textSize="20sp"
@@ -82,7 +82,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="     Address"
-            android:drawableLeft="@drawable/home_icon"
             android:padding="10dp"
             android:textColor="@color/black_overlay"
             android:textSize="20sp"
