Scroll view added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity"
+    android:orientation="vertical">
+
+<LinearLayout
+    android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:weightSum="0"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
+
 
 
     <LinearLayout
@@ -126,3 +132,4 @@
         android:textSize="20dp" />
 
 </LinearLayout>
+</ScrollView>
