--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:weightSum="13"
     android:orientation="vertical"
     tools:context=".VerificationActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout
+    android:weightSum="13"
+    android:orientation="vertical"
     android:background="@color/white"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
 
     <LinearLayout
@@ -106,3 +110,4 @@
 
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
